added fontastic css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,5 +12,7 @@
  *
  */
 
+// Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "font-awesome";
+@import "fontastic";
 @import "bootstrap";
